--- a/WeaponStrutsEJB/nbproject/genfiles.properties
+++ b/WeaponStrutsEJB/nbproject/genfiles.properties
@@ -6,3 +6,4 @@ build.xml.stylesheet.CRC32=651128d4@1.24.2.1
 nbproject/build-impl.xml.data.CRC32=5d163960
 nbproject/build-impl.xml.script.CRC32=46a4907c
 nbproject/build-impl.xml.stylesheet.CRC32=8419264d@1.24.2.1
+nbproject/jaxws-build.xml.stylesheet.CRC32=b0a0073f
